# Market-Monitoring-System

./: README.md  manage.py  pyproject.toml
MMS/: asgi.py  settings.py  urls.py  wsgi.py
apps/Users/: admin.py  models.py  permissions.py  tokens.py  urls.py  views.py
apps/Users/migrations/: 0001_initial.py  0002_user_business_name_user_business_registration_number_and_more.py
apps/dashboard/: models.py  urls.py  views.py
apps/dashboard/migrations/: 0001_initial.py
apps/products/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py
media/products/images/: banana.jfif
templates/: navbar.html
templates/dashboard/: base.html  footer.html  home.html  navbar.html  product_list.html
templates/products/: create_product.html  product_list.html  product_search.html
templates/users/: activation_failed.html  email_confirmation.html  forgot_password.html  login.html  logout.html  pending.html  pending_user.html  profile.html  register_admin.html  register_farmer.html  register_seller.html  register_whole_seller.html  reset_password.html  update_password.html
